--- a/Basic/index.html
+++ b/Basic/index.html
@@ -12,14 +12,32 @@
     <div id="app">
         <div class="row">
             <div class="small-5 columns text-center">
-                <img src="images/rock.jpg" alt="" class="text-center">
+                <img 
+                v-if="myChoice !== null"
+                :src="'images/' + myChoice + '.jpg'" 
+                alt="" 
+                class="text-center">
+                <img 
+                v-else
+                src="images/question.jpg"
+                alt="" 
+                class="text-center">
                 <h1 class="text-center"><strong>YOU</strong></h1>
             </div>
             <div class="small-2 columns text-center">
-                <h1 style="font-size:100px;"><strong>3</strong></h1>
+                <h1 style="font-size:100px;"><strong>{{ count }}</strong></h1>
             </div>
             <div class="small-5 columns text-center">
-                <img src="images/question.jpg" alt="" class="text-center">
+                <img 
+                v-if="comChoice !== null"
+                :src="'images/' + comChoice + '.jpg'" 
+                alt="" 
+                class="text-center">
+                <img 
+                v-else
+                src="images/question.jpg"
+                alt="" 
+                class="text-center">
                 <h1 class="text-center"><strong>Computer</strong></h1>
             </div>
         </div>
@@ -27,16 +45,30 @@
         <div class="row">
             <div class="small-6 columns text-center">
                 <div class="battle-wrap">
-                    <img src="./images/heart.jpg" class="heart" alt="">
-                    <img src="./images/heart.jpg" class="heart" alt="">
-                    <img src="./images/heart.jpg" class="heart" alt="">
+                    <img 
+                    v-for="life in lifeOfMe"
+                    src="./images/heart.jpg" 
+                    class="heart" 
+                    alt="">
+                    <img 
+                    v-for="life in 3-lifeOfMe"
+                    src="./images/broken-heart.jpg" 
+                    class="heart" 
+                    alt="">
                 </div>
             </div>
             <div class="small-6 columns text-center">
                 <div class="battle-wrap">
-                    <img src="./images/heart.jpg" class="heart" alt="">
-                    <img src="./images/heart.jpg" class="heart" alt="">
-                    <img src="./images/heart.jpg" class="heart" alt="">
+                    <img 
+                    v-for="life in lifeOfCom"
+                    src="./images/heart.jpg" 
+                    class="heart" 
+                    alt="">
+                    <img 
+                    v-for="life in 3-lifeOfCom"
+                    src="./images/broken-heart.jpg" 
+                    class="heart" 
+                    alt="">
                 </div>
             </div>
         </div>
@@ -45,15 +77,21 @@
             <div class="small-6 columns text-center">
                 <div class="row">
                     <div class="small-8 small-offset-2 columns text-center">
-                        <label class="radio-label"><input type="radio"> 가위</label>
-                        <label class="radio-label"><input type="radio"> 바위</label>
-                        <label class="radio-label"><input type="radio"> 보</label>
+                        <label class="radio-label">
+                            <input type="radio" v-model="myChoice" value="scissor"> 가위
+                        </label>
+                        <label class="radio-label">
+                            <input type="radio" v-model="myChoice" value="rock"> 바위
+                        </label>
+                        <label class="radio-label">
+                            <input type="radio" v-model="myChoice" value="paper"> 보
+                        </label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="small-12 columns">
-                        <div class="text-center">
-                            <button class="start-btn">선택 완료!</button>
+                        <div class="text-center" v-if="isSelectable">
+                            <button class="start-btn" @click="startGame()">선택 완료!</button>
                         </div>
                         <div class="loading"> 기다리는 중...</div>
                     </div>
@@ -67,13 +105,19 @@
         <div class="row">
             <div class="small-12 columns log">
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li 
+                    :class="{
+                    'win-log': log.winner === 'me', 
+                    'defeat-log': log.winner === 'com', 
+                    'draw-log': log.winner === 'no'
+                }"
+                    v-for="log in logs">{{log.message}}
+                </li>
                 </ul>
             </div>
         </div>
     </div>
+    <script src="app.js"></script>
 </body>
 
 </html>
