--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+<head profile="http://www.w3.org/2005/10/profile"> 
     <title>Rock Scissor Paper</title>
     <script src="https://npmcdn.com/vue/dist/vue.js"></script>
     <link rel="stylesheet" href="css/foundation.min.css">
     <link rel="stylesheet" href="css/app.css">
+    <link rel="icon" type="image/png" href="http://example.com/myicon.png">
 </head>
 
 <body>
